# A-Hausa-Customer-Service-Chatbot

./: README.md
hausa-customer-service-chatbot/api/: main.py  pyproject.toml
hausa-customer-service-chatbot/frontend/: index.html  styles.css
