[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["miracleJohn <wuesemimi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
groq = "^0.12.0"
langchain-groq = "^0.2.1"
langchain-core = "^0.3.18"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
speechrecognition = "^3.14.2"
gtts = "^2.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
